# AtomScribe

./: .gitignore  AI_Lab_Scribe_Technical_Design.docx  README.md  environment.yml  main.py  pyproject.toml
src/atomscribe/: __init__.py  app.py  main.py
src/atomscribe/core/: __init__.py  audio_recorder.py  capture_backend.py  claude_analyzer.py  claude_vision.py  click_screenshotter.py  config.py  doc_generator.py  frame_extractor.py  input_recorder.py  llm_processor.py  markdown_writer.py  recording_controller.py  screen_recorder.py  session.py  speaker_diarizer.py  transcriber.py  transcript_analyzer.py  vlm_processor.py  window_manager.py
src/atomscribe/signals/: __init__.py  app_signals.py
src/atomscribe/styles/: __init__.py  colors.py  notion_light.qss  theme.py
src/atomscribe/ui/: __init__.py  main_window.py
src/atomscribe/ui/dialogs/: __init__.py  first_run_dialog.py  generation_mode_dialog.py  generation_progress_dialog.py  new_session_dialog.py  settings_dialog.py
src/atomscribe/ui/widgets/: __init__.py  preview_panel.py  realtime_panel.py  recording_bar.py  sidebar.py  waveform.py
