[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "atomscribe"
version = "0.1.0"
description = "AI Lab Scribe - Intelligent Experiment Recording System"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6.0",
    "pydantic>=2.0",
    "loguru>=0.7.0",
    "sounddevice>=0.4.0",
    "numpy>=1.24.0",
    "pydub>=0.25.0",
]

[project.scripts]
atomscribe = "atomscribe.main:main"

[tool.setuptools.packages.find]
where = ["src"]
